# Tic-Tac-Toe-PPO

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
checkpoints/: best_agent.pt
frontend/: index.html
frontend/static/: main.js
src/tictactoe/: config.py  environment.py  model.py  trainer.py  utils.py
src/tictactoe/agents/: base_agent.py  ppo_agent.py  random_agent.py  rule_based_agent.py
src/tictactoe/api/: lifespan.py  main.py
src/tictactoe/api/routes/: checkpoint.py  config.py  frontend.py  game.py  health.py  training.py
tests/: conftest.py  test_api.py  test_environment.py  test_model.py  test_ppo_agent.py  test_trainer.py
